--- a/static/assets/sass/base/utilities/_initial-variable.scss
+++ b/static/assets/sass/base/utilities/_initial-variable.scss
@@ -1,21 +1,53 @@
-//  color variable
-$ac-primary: #1971bd;
+$primary-hue: 149;
+$primary-saturation: 100%;
+$primary-5: hsl($primary-hue, $primary-saturation, 5%);
+$primary-10: hsl($primary-hue, $primary-saturation, 10%);
+$primary-20: hsl($primary-hue, $primary-saturation, 20%);
+$primary: hsl($primary-hue, $primary-saturation, 30%);
+$primary-30: hsl($primary-hue, $primary-saturation, 30%);
+$primary-40: hsl($primary-hue, $primary-saturation, 40%);
+$primary-50: hsl($primary-hue, $primary-saturation, 50%);
+$primary-60: hsl($primary-hue, $primary-saturation, 60%);
+$primary-70: hsl($primary-hue, $primary-saturation, 70%);
+$primary-80: hsl($primary-hue, $primary-saturation, 80%);
+$primary-90: hsl($primary-hue, $primary-saturation, 90%);
+$primary-93: hsl($primary-hue, $primary-saturation, 93%);
+$primary-95: hsl($primary-hue, $primary-saturation, 95%);
+$primary-97: hsl($primary-hue, $primary-saturation, 97%);
 
-// $ac-color-text: #3b3030;
-$ac-color-text: #506070;
-$ac-color-label: #a6abbd;
-$ac-color-link: #4a4a4a;
-$ac-color-value: #393939;
-$ac-color-heading: #1c1c1c;
+$primary-light-grey: hsl($primary-hue, 30%, 96%);
+$primary-dark-grey: hsl($primary-hue, 30%, 10%);
 
-$ac-black: #000000;
-$ac-bg: #ffffff;
-$ac-white: #ffffff;
-$ac-white-light: #dbdbde;
-$ac-white-lighter: #f1f1f1;
-$ac-gray-dark: #5f5f5f;
-$ac-gray-light: #8d8d8d;
-$ac-gray-lightest: #d1d1d1;
+$secondary-hue: 197;
+$secondary-saturation: 50%;
+$secondary-5: hsl($secondary-hue, $secondary-saturation, 5%);
+$secondary-10: hsl($secondary-hue, $secondary-saturation, 10%);
+$secondary-20: hsl($secondary-hue, $secondary-saturation, 20%);
+$secondary: hsl($secondary-hue, $secondary-saturation, 20%);
+$secondary-30: hsl($secondary-hue, $secondary-saturation, 30%);
+$secondary-40: hsl($secondary-hue, $secondary-saturation, 40%);
+$secondary-50: hsl($secondary-hue, $secondary-saturation, 50%);
+$secondary-60: hsl($secondary-hue, $secondary-saturation, 60%);
+$secondary-70: hsl($secondary-hue, $secondary-saturation, 70%);
+$secondary-80: hsl($secondary-hue, $secondary-saturation, 80%);
+$secondary-90: hsl($secondary-hue, $secondary-saturation, 90%);
+$secondary-93: hsl($secondary-hue, $secondary-saturation, 93%);
+$secondary-95: hsl($secondary-hue, $secondary-saturation, 95%);
+$secondary-97: hsl($secondary-hue, $secondary-saturation, 97%);
+
+$secondary-light-grey: hsl($secondary-hue, 30%, 96%);
+$secondary-dark-grey: hsl($secondary-hue, 30%, 10%);
+
+$color-text: hsl($secondary-hue, 10%, 35%);
+$color-heading: hsl($secondary-hue, 10%, 10%);
+$color-label: hsl($secondary-hue, 20%, 50%);
+$color-link: hsl($secondary-hue, 40%, 20%);
+$color-border-light: hsl($primary-hue, 40%, 95%);
+$color-border: hsl($primary-hue, 50%, 90%);
+$color-border-dark: hsl($primary-hue, 10%, 80%);
+$color-bg: hsl(0, 0%, 100%);
+$white-100: hsl(0, 0%, 100%);
+$color-black: hsl(0, 0%, 0%);
 
 // size
 $ac-size-1: 48px;
