--- a/static/assets/sass/components/_button.scss
+++ b/static/assets/sass/components/_button.scss
@@ -1,13 +1,13 @@
 .button {
   transition: 0.3s ease-in-out;
   &.ac-button {
-    border-color: $ac-primary;
+    border-color: $primary;
     border-radius: 0.125rem;
     font-size: 0.875rem;
     font-family: $ac-font-paragraph;
     letter-spacing: 0.078rem;
     line-height: 1;
-    color: $ac-primary;
+    color: $primary;
     font-weight: 500;
     padding: 0.5rem 1.5rem;
     display: inline-flex;
@@ -19,8 +19,8 @@
     }
 
     &:hover {
-      background-color: $ac-primary;
-      color: $ac-white;
+      background-color: $primary;
+      color: $white-100;
       box-shadow: 2px 4px 24px rgba(20, 14, 48, 0.336) !important;
       transform: translateY(-2px);
     }
@@ -31,8 +31,8 @@
 
     .ac-icon {
       margin-left: 25px;
-      background-color: $ac-white;
-      color: $ac-primary;
+      background-color: $white-100;
+      color: $primary;
       padding: 2px 6px;
       border-radius: 4px;
       width: 28px;
@@ -69,18 +69,18 @@
       font-size: 14px;
       font-weight: 500;
       background-color: transparent;
-      color: $ac-color-heading;
+      color: $color-heading;
       &:hover {
         box-shadow: none !important;
       }
 
       &.is-primary {
         background-color: transparent;
-        color: $ac-primary;
+        color: $primary;
 
         &:hover {
           background-color: transparent;
-          color: $ac-primary;
+          color: $primary;
         }
       }
 
@@ -106,17 +106,17 @@
     }
 
     &.is-white {
-      background-color: $ac-white;
+      background-color: $white-100;
       border: none;
       &:hover {
-        color: $ac-primary;
+        color: $primary;
         opacity: 0.9;
       }
     }
 
     // ac-button from mixin
     &.is-primary {
-      @include ac-button($ac-primary);
+      @include ac-button($primary);
     }
    
     &.is-link {
@@ -128,7 +128,7 @@
     }
 
     &.is-success {
-      @include ac-button($ac-primary);
+      @include ac-button($primary);
     }
 
     &.is-warning {
@@ -148,7 +148,7 @@
   margin: 0;
   padding: 0;
   font-size: 0.875rem;
-  color: $ac-color-text;
+  color: $color-text;
   font-weight: 500;
   border: none;
   background: transparent;
