--- a/static/assets/sass/layouts/_blog-details.scss
+++ b/static/assets/sass/layouts/_blog-details.scss
@@ -21,10 +21,10 @@
   figcaption {
     max-width: 80%;
     margin: 0 auto;
-    color: $ac-color-text;
+    color: $color-text;
     opacity: 0.8;
     padding: 10px 0;
-    border-bottom: 1px solid $ac-white-light;
+    border-bottom: 1px solid $color-border;
   }
 }
 
@@ -62,7 +62,7 @@
     bottom: 0;
     width: 0;
     height: 2px;
-    background: $ac-primary;
+    background: $primary;
     border-radius: 50px;
     transition: 0.3s ease-in-out;
   }
@@ -85,7 +85,7 @@
     }
 
     img {
-      border: 1px solid $ac-white-light;
+      border: 1px solid $color-border;
       padding: 15px;
       border-radius: 8px;
     }
@@ -101,7 +101,7 @@
   }
 
   figure {
-    border: 1px solid $ac-white-light;
+    border: 1px solid $color-border;
     margin-bottom: 15px;
     border-radius: 4px;
   }
@@ -177,7 +177,7 @@
       top: 0;
       width: 4px;
       height: 100%;
-      background-color: $ac-primary;
+      background-color: $primary;
       border-radius: 2px;
     }
   }
@@ -235,7 +235,7 @@
 
     td,
     th {
-      border: 1px solid $ac-white-light;
+      border: 1px solid $color-border;
       padding: 10px 20px;
     }
 
