Add product tag
Signed-off-by: mohin7 <mohin@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -118,10 +118,11 @@
 
           <div class="navbar-left">
             <div class="navbar-brand">
-              <a href="{{.Site.Params.domain_bytebuilders}}">
+              <a href="{{.Site.Params.domain_bytebuilders}}" class="is-flex gap-8">
                 <img src="https://cdn.appscode.com/images/products/appscode/appscode-logo-white.png" alt="img"
                   loading="lazy"
                   decoding="async" loading="lazy" decoding="async" />
+                  <span class="brand-tag">Blog</span>
               </a>
               <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
                 <span aria-hidden="true"></span>
