Update appscode navbar
Signed-off-by: mohin7 <mohin@appscode.com>

--- a/static/assets/sass/components/_navbar.scss
+++ b/static/assets/sass/components/_navbar.scss
@@ -1,19 +1,10 @@
 // new navbar area start
 .navbar-area {
   position: relative;
-
   z-index: 99;
-
-  &.header--fixed {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-  }
 }
-
 .navbar-appscode-wrapper {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  border-bottom: 1px solid rgba(255,255,255, 0.2);
 }
 
 .navbar-appscode {
@@ -24,7 +15,14 @@
 
   &.container {
     padding: 0.5rem 0;
+
+    .mega-menu-wrapper {
+      width: calc(100% + 100%);
+      left: -50%;
+    }
   }
+
+
 
   .navbar-left {
     display: flex;
@@ -40,7 +38,7 @@
         align-items: center;
 
         img {
-          height: 30px;
+          height: 1.875rem;
         }
       }
     }
@@ -52,17 +50,42 @@
     width: calc(100% - 200px);
     justify-content: flex-end;
 
-    .button {
-      margin-left: 2.5rem;
+    .navbar-left-group {
+      display: flex;
+      align-items: center;
+      @media (min-width: 0px) and (max-width: 1023px) {
+        align-items: flex-start;
+      }
+    }
 
-      &.is-secondary {
-        &:hover {
-          border: 1px solid $color-border;
+    .navbar-right-group {
+      display: flex;
+      align-items: center;
+      gap: 32px;
+      .buttons{
+        .button {
+          &:has(.tag){
+            gap: 4px;
+          }
+          .tag {
+            background-color: $primary;
+            color: $white-100;
+          }
         }
       }
 
-      &.is-primary {
-        border: 1px solid $color-border;
+      @media (min-width: 0px) and (max-width: 1023px) {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 16px;
+        width: 100%;
+        .buttons{
+          width: 100%;
+          .button {
+            width: 100%;
+            margin-right: 0;
+          }
+        }
       }
     }
   }
@@ -73,11 +96,15 @@
 
       &.is-active {
         .link {
-          color: $primary;
+          color: $primary-90;
 
           i.fa {
             transform: rotate(-180deg);
           }
+        }
+
+        .mega-menu-wrapper {
+          display: block !important;
         }
       }
 
@@ -100,11 +127,11 @@
         z-index: 1;
 
         &.is-active {
-          color: $color-border;
+          color: $primary-90;
         }
 
         &:hover {
-          color: $color-border;
+          color: $primary-90;
         }
 
         .fa {
@@ -115,8 +142,8 @@
         .whats-new {
           position: absolute;
           z-index: 1;
-          top: -0.5rem;
-          right: -2.5rem;
+          top: -10px;
+          right: -30px;
           font-size: 0.8rem;
           color: $white-100;
           padding: 0.2rem 0.3rem;
@@ -178,6 +205,178 @@
 }
 
 // new navbar area end
+
+.mega-menu-wrapper {
+  display: none;
+  background: $white-100;
+  position: absolute;
+  z-index: 9;
+  min-width: 300px;
+  padding: 2.5rem 0;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 61px;
+
+  .mega-menu-inner {
+    overflow: hidden;
+
+    // product menu start
+    .product-menu {
+      display: grid;
+      grid-template-columns: auto auto;
+      width: 60%;
+      float: left;
+
+      &.database-list {
+        grid-template-columns: auto auto auto;
+
+        .single-product {
+          grid-template-columns: 40px auto 1.5rem;
+          width: 100%;
+          padding: 0.7rem;
+
+          .product-logo {
+            height: 40px;
+            width: 40px;
+
+            img {
+              height: 1.5rem;
+            }
+          }
+
+          .navigate-icon {
+            .material-icons {
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+
+      .single-product {
+        display: grid;
+        grid-template-columns: 3.75rem auto 1.5rem;
+        padding: 1rem;
+        align-items: center;
+        width: 100%;
+        grid-gap: 1rem;
+        border-radius: 0.25rem;
+        transition: 0.3s ease-in-out;
+        cursor: pointer;
+
+        &:hover,
+        &.is-active {
+          background-color: #4d4dcb0d;
+
+          .navigate-icon {
+            .material-icons {
+              opacity: 1;
+              visibility: visible;
+            }
+          }
+        }
+
+        .product-logo {
+          height: 60px;
+          width: 60px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: #e9e9fc;
+          border-radius: 0.25rem;
+
+          img {
+            height: 2.5rem;
+          }
+        }
+
+        .product-info {
+          h6 {
+            font-size: 1rem;
+            letter-spacing: 0.009rem;
+            color: $color-heading;
+            font-weight: 500;
+          }
+
+          p {
+            font-size: 0.813rem;
+            color: #636363;
+            line-height: 140%;
+            letter-spacing: 0.025rem;
+          }
+        }
+
+        .navigate-icon {
+          text-align: right;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          .material-icons {
+            font-size: 1.2rem;
+            color: $primary;
+            opacity: 0;
+            visibility: hidden;
+            transition: 0.3s ease-in-out;
+          }
+        }
+      }
+    }
+
+    // product menu end
+
+    // description start
+    .product-description {
+      margin-left: 1rem;
+      float: left;
+      border-left: 1px solid $color-border;
+      padding-left: 4rem;
+      max-width: 36%;
+      opacity: 0;
+      display: none;
+      visibility: hidden;
+      transition: 0.3s ease-in-out;
+
+      &.is-block {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      .brand {
+        margin-bottom: 1rem;
+
+        img {
+          height: 1.5rem;
+        }
+      }
+
+      p {
+        font-size: 0.875rem;
+        color: $color-text;
+        line-height: 160%;
+        margin-bottom: 1rem;
+      }
+
+      .features {
+        li {
+          font-size: 0.813rem;
+          color: $color-heading;
+          display: flex;
+          align-items: center;
+          margin-bottom: 15px;
+
+          .material-icons {
+            font-size: 1rem;
+            margin-right: 0.6rem;
+            color: $primary;
+          }
+        }
+      }
+    }
+
+    // description end
+  }
+}
 
 .back-button {
   display: none !important;
@@ -284,6 +483,16 @@
       margin-bottom: 1.5rem;
       display: inline-block;
       letter-spacing: 1.2px;
+
+      // &:after {
+      //   position: absolute;
+      //   content: "";
+      //   left: 0;
+      //   bottom: 0;
+      //   width: 50%;
+      //   height: 2px;
+      //   background-color: $primary;
+      // }
     }
 
     ul {
@@ -311,6 +520,130 @@
   }
 }
 
+.press-wrapper {
+  .single-press {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 1.5rem;
+    display: flex;
+    align-items: center;
+    transition: 0.3s;
+
+    &:hover {
+      h6 {
+        color: $primary;
+      }
+    }
+
+    .calender {
+      text-align: center;
+      height: 90px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: flex-start;
+      flex-direction: column;
+      margin-right: 1rem;
+      border-radius: 4px;
+
+      .date {
+        width: 84px;
+        height: 45px;
+        background-color: #9dffcd;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 28px;
+        line-height: 140%;
+        letter-spacing: 0.4px;
+        color: $primary;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+      }
+
+      .month {
+        width: 84px;
+        height: 45px;
+        background: #ccffe5;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 18px;
+        line-height: 140%;
+        letter-spacing: 0.4px;
+        color: $primary;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+      }
+    }
+
+    .description {
+      max-width: 327px;
+
+      h6 {
+        font-size: 1rem;
+        margin-bottom: 0px;
+        letter-spacing: 0;
+        font-weight: 500;
+        display: block;
+
+        &:after {
+          position: inherit;
+        }
+      }
+
+      .author {
+        font-weight: 400;
+        font-size: 0.875rem;
+        letter-spacing: 0.4px;
+        margin-bottom: 0.5rem;
+        display: block;
+        color: #1c1c1c;
+      }
+
+      p {
+        font-size: 0.875rem;
+        color: #636363;
+        line-height: 150%;
+      }
+    }
+  }
+
+  .button.inline-button {
+    margin-left: 100px !important;
+  }
+}
+
+.community-items {
+  display: flex;
+  align-items: center;
+
+  .community-item {
+    border: 1px solid #636363;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2px;
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-right: 0.5rem;
+    transition: 0.3s;
+
+    &:hover {
+      background-color: $primary;
+      border-color: $primary;
+
+      img {
+        filter: brightness(10);
+      }
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
 // responsive menu start
 .responsive-menu {
   background-color: $primary;
@@ -332,6 +665,105 @@
 
 // responsive menu end
 
+// product version style start
+.product-version {
+  .dropdown {
+    .dropdown-trigger {
+      .button {
+        font-size: 0.813rem;
+        width: 210px;
+        height: 2rem;
+        border-radius: 2px;
+        padding: 2px 15px;
+        color: $color-heading;
+        border: 1px solid $color-border;
+
+        .arrow {
+          color: #999999;
+          font-size: 0.9rem;
+        }
+      }
+    }
+
+    .dropdown-menu {
+      /* ===== Scrollbar CSS ===== */
+      /* Firefox */
+      * {
+        scrollbar-width: auto;
+        scrollbar-color: #ebebeb #fafafd;
+      }
+
+      /* Chrome, Edge, and Safari */
+      *::-webkit-scrollbar {
+        width: 12px;
+      }
+
+      *::-webkit-scrollbar-track {
+        background: #fafafd;
+      }
+
+      *::-webkit-scrollbar-thumb {
+        background-color: #ebebeb;
+        border-radius: 10px;
+        border: 3px solid #fafafd;
+      }
+
+      .dropdown-content {
+        max-height: 420px;
+        overflow-y: auto;
+
+        .dropdown-item {
+          font-size: 0.813rem;
+          color: $color-heading;
+        }
+      }
+    }
+  }
+
+  .new-item {
+    background-color: $primary;
+    font-size: 0.813rem;
+    color: $white-100;
+    border-radius: 2px;
+    height: 1.2rem;
+    padding: 2px 5px;
+    line-height: 1.2;
+  }
+}
+
+// product version style end
+// navbar search start
+.ac-searchbar {
+  position: relative;
+  z-index: 1;
+  padding: 0 20px;
+  border-left: 1px solid $color-border;
+
+  label {
+    .fa {
+      color: $color-heading;
+    }
+  }
+
+  input[type="search"] {
+    border: none;
+    background-color: transparent;
+    color: $color-text;
+    font-size: 0.875rem;
+    width: 270px;
+    padding: 0.2rem 0.875rem;
+
+    &:focus {
+      border: none;
+      outline: none;
+    }
+
+    &::placeholder {
+      color: #636363;
+    }
+  }
+}
+
 // navbar search end
 
 // modal-backdrop start
@@ -348,12 +780,54 @@
 }
 
 // modal-backdrop end
+.header--fixed {
+  position: fixed;
+  z-index: 10;
+  right: 0;
+  left: 0;
+  top: 0;
+  &::after {
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #ffffff;
+    z-index: -1;
+    transition: 0.5s ease-in-out;
+  }
+  &.headroom--unpinned {
+    &::after {
+      transition: transform 500ms linear;
+    }
+  }
+}
+
+.headroom {
+  will-change: transform;
+  transition: transform 200ms linear;
+}
+
+.headroom--pinned {
+  transform: translateY(0px);
+  transition: transform 500ms linear;
+}
+
+.headroom--unpinned {
+  transform: translateY(-165px);
+
+  .navbar-appscode-wrapper {
+    &.navbar-product {
+      transform: translateY(104px);
+    }
+  }
+}
 
 .navbar-burger {
   height: 30px;
   width: 30px;
   border-radius: 4px;
-
   &.is-active {
     i.fa {
       transform: rotate(-180deg);
@@ -370,15 +844,46 @@
 Responsive Classes
 *****************************************/
 @media (max-width: 1023.98px) {
-  .navbar-burger {
-    span {
-      background-color: $white-100;
+  .headroom--unpinned {
+    .navbar-appscode-wrapper {
+      &.navbar-product {
+        padding: 0 0;
+        transform: translateY(104px);
+
+        .navbar-appscode {
+          .navbar-right {
+            top: 47px;
+          }
+        }
+      }
+
+      // .documentation-menu {
+      //   .navbar-right {
+      //     top: 85px !important;
+      //   }
+      // }
     }
   }
 
   .navbar-appscode {
     &.container {
-      padding: 1rem 15px;
+      padding: 0.5rem 15px;
+    }
+
+    &.documentation-menu {
+      margin-left: 0;
+      padding: 0;
+      ul .nav-item {
+        .link.is-active:after {
+          display: none;
+        }
+      }
+      .navbar-right {
+        position: fixed;
+        // top: -60px !important;
+        width: 80%;
+        border-right: 1px solid $color-border;
+      }
     }
 
     .navbar-left {
@@ -390,7 +895,7 @@ Responsive Classes
 
         a {
           img {
-            height: 2rem !important;
+            height: 1.5rem !important;
           }
         }
       }
@@ -420,7 +925,6 @@ Responsive Classes
       justify-content: flex-start;
       flex-direction: column;
       align-items: flex-start;
-      background-color: $primary;
 
       .is-flex.is-justify-content-space-between {
         flex-direction: column;
@@ -433,11 +937,9 @@ Responsive Classes
       }
 
       .button.ac-button {
-        margin-left: 0;
-
         &.is-primary {
           margin-left: 0;
-          width: auto;
+          width: 100%;
         }
       }
 
@@ -448,15 +950,16 @@ Responsive Classes
         li.nav-item {
           margin: 6px 0;
 
-          .link {
-            text-align: center;
-
-            .whats-new {
-              top: -0.7rem;
-              right: 0.2rem;
-            }
+          .link .whats-new {
+            top: -10px;
+            right: -30px;
           }
         }
+      }
+
+      .community-items.ml-70 {
+        margin-left: 0 !important;
+        margin-top: 30px;
       }
 
       &.is-visible {
@@ -465,7 +968,108 @@ Responsive Classes
       }
     }
   }
+
+  .resources-list {
+    grid-template-columns: auto;
+
+    .list-items {
+      h6 {
+        margin-bottom: 0.5rem;
+      }
+    }
+  }
+
+  .mega-menu-wrapper {
+    width: 100% !important;
+    left: 0 !important;
+    top: 0 !important;
+    padding-top: 20px !important;
+    background-color: #fafafd;
+    max-height: 90vh;
+    overflow-y: auto;
+
+    .mega-menu-inner {
+      .product-menu {
+        grid-template-columns: auto;
+        width: 100%;
+
+        .single-product {
+          width: 100%;
+
+          .product-logo {
+            height: 50px;
+            width: 50px;
+
+            img {
+              height: 1.8rem;
+            }
+          }
+
+          .navigate-icon {
+            .material-icons {
+              font-size: 16px;
+            }
+          }
+        }
+
+        &.database-list {
+          grid-template-columns: auto;
+        }
+      }
+
+      .product-description {
+        border-left: none;
+        padding-left: 0;
+        margin-top: 35px;
+        margin-left: 0;
+        max-width: 100%;
+      }
+    }
+  }
+  .press-wrapper {
+    .button.inline-button {
+      margin-left: 0 !important;
+      background-color: transparent;
+    }
+  }
+  .navbar-appscode-wrapper.navbar-product {
+    .navbar-appscode .navbar-right {
+      top: 47px;
+    }
+  }
+
+  .product-version {
+    &.pl-20 {
+      padding-left: 10px;
+    }
+
+    .dropdown {
+      .dropdown-trigger {
+        .button {
+          width: 190px;
+        }
+      }
+    }
+
+    .dropdown-menu {
+      z-index: 9999;
+    }
+  }
+
+  .back-button {
+    display: flex !important;
+
+    span {
+      color: $primary;
+      padding-right: 15px;
+      font-size: 18px;
+    }
+  }
 }
+
+// // Small devices (landscape phones, 576px and up)
+// @media (min-width: 576px) and (max-width: 768px) {
+// }
 
 // Medium devices (tablets, 769px and up)
 @media (min-width: 769px) and (max-width: 1023.98px) {
@@ -482,19 +1086,45 @@ Responsive Classes
       margin-left: 0;
       border-left: none;
     }
-
+    .navbar-left {
+      .navbar-brand {
+        margin-right: 1rem;
+      }
+    }
     .navbar-right {
       width: calc(100% - 180px);
 
       .community-items.ml-70 {
         margin-left: 10px !important;
       }
+      .button.ac-button {
+        padding: .5rem 1rem;
+      }
     }
-
+    .navbar-right-group {
+      gap: 8px !important;
+    }
     ul {
       .nav-item {
-        margin-right: 1.5rem;
+        margin-right: 0.5rem;
       }
+    }
+  }
+
+  .mega-menu-wrapper {
+    .mega-menu-inner {
+      .product-menu {
+        grid-template-columns: auto;
+        width: calc(50% - 5rem);
+      }
+
+      .product-description {
+        border-left: none;
+      }
+    }
+
+    .video-content {
+      display: none;
     }
   }
 
@@ -506,7 +1136,7 @@ Responsive Classes
     .dropdown {
       .dropdown-trigger {
         .button {
-          width: 160px;
+          width: 180px;
           padding: 2px 5px;
         }
       }
@@ -518,13 +1148,11 @@ Responsive Classes
   .navbar-burger {
     display: none !important;
   }
-
   .navbar-appscode {
     &.documentation-menu {
       margin-left: 0;
       border-left: none;
     }
-
     .navbar-right {
       width: calc(100% - 180px);
 
@@ -537,6 +1165,22 @@ Responsive Classes
       .nav-item {
         margin-right: 1.5rem;
       }
+    }
+  }
+  .mega-menu-wrapper {
+    .mega-menu-inner {
+      .product-menu {
+        grid-template-columns: auto;
+        width: calc(50% - 5rem);
+      }
+
+      .product-description {
+        border-left: none;
+      }
+    }
+
+    .video-content {
+      display: none;
     }
   }
 }
