--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -425,7 +425,7 @@ ul.social-share-button {
 }
 
 .search-filter-area {
-  z-index: 99;
+  z-index: 9;
   background: #fff;
   box-shadow: 0 1px 3px rgba(15, 20, 40, 0.08);
   border-bottom: 1px solid $color-border;
@@ -1246,7 +1246,7 @@ ul.social-share-button {
 
 @media (min-width: 2000px) {
   .hero-area-blog {
-    background-image: url(/blog/assets/images/bg-image/hero-bg-2x.png);
+    background-image: url(/blog/assets/images/bg-image/hero-bg-2x.jpg);
   }
 }
 
