Update hero-area bg color
Signed-off-by: mohin7 <csemohin@gmail.com>

--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -7,6 +7,7 @@
   min-height: 62vh;
   display: flex;
   align-items: center;
+  background-color: #119551;
 
   &.author-page {
     min-height: auto;
