--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -861,6 +861,10 @@ ul.social-share-button {
 
         h1 {
           font-size: 28px;
+          margin-bottom: 8px;
+        }
+        p{
+          margin-bottom: 16px;
         }
 
         .social-share {
